apps/wallabag/wallabag-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: wallabag
  labels:
    apps.gitops: wallabag
...
