apps/wallabag/wallabag-redis.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wallabag-redis
  namespace: wallabag
spec:
  selector:
    matchLabels:
      app: wallabag
      component: redis
  serviceName: redis
  replicas: 1
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9121"
      labels:
        app: wallabag
        component: redis
    spec:
      containers:
        - name: redis
          image: docker.io/redis:6
          args: ["--requirepass", "$(REDIS_PASSWORD)", "--appendonly", "yes", "--save", "30", "100"]
          ports:
          - containerPort: 6379
            name: redis
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 200m
              memory: 200Mi
          volumeMounts:
          - mountPath: "/data"
            name: redis-data
        - name: redis-exporter
          image: docker.io/oliver006/redis_exporter:latest
          resources:
            limits:
              cpu: 300m
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
          - containerPort: 9121
            name: metrics
  volumeClaimTemplates:
  - metadata:
      name: redis-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: nfs-sc
      resources:
        requests:
          storage: 3Gi
---
apiVersion: v1
kind: Service
metadata:
  name: wallabag-redis
  namespace: wallabag
spec:
  selector:
    app: wallabag
    component: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
      name: redis
    - protocol: TCP
      port: 9121
      targetPort: 9121
      name: metrics
