apps/wallabag/wallabag-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: wallabag
    namespace: wallabag
    annotations:
        kubernetes.io/ingress.class: nginx
        cert-manager.io/cluster-issuer: letsencrypt-ovh
    labels:
        app: wallabag
spec:
    rules:
        - host: ENC[AES256_GCM,data:I1wMxFFq/k58roHdzvtjyUH32W9SHl7LyEQ=,iv:49scr7+uxKG2NjFB91F0hkK+xA32l7RyXwe1RK5etv0=,tag:SQdH7Ln0SI8e0CRij8e+KQ==,type:str]
          http:
            paths:
                - backend:
                    service:
                        name: wallabag
                        port:
                            number: 80
                  path: /
                  pathType: Prefix
    tls:
        - hosts:
            - ENC[AES256_GCM,data:z9HuwRfSMvdjBuIaeb5khgxuPESvopn9nVE=,iv:oyGb29Vq+L8MuXqkBtc2rAdBYaEPzb1g9puVkDV1458=,tag:1o9D9ceGUxl28cww5u75LQ==,type:str]
          secretName: wallabag-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2022-02-23T20:40:04Z"
    mac: ENC[AES256_GCM,data:HSbWeV1J5XiQT1G/B01RRAf+TpGKYzBjzq8qY5JGEeMjjRjZ+fyk+V+bVmt+Q78BFTjKM65tbjByhDY2NWEXL/IuSmvik+Za5Xat+q9FOO/pH0ghaiX3dxy6vbLg1wWHSWl/GwP1vKXfyrB4zBCMz6y8NP25AmTbuBmF9LXOqJo=,iv:nzb29OE3wXQf5vzXLNiXnqFKlMHQ1Eoa7Wp7TAXUZRE=,tag:Ae6sAQOv0Ne40tGcKHs47A==,type:str]
    pgp:
        - created_at: "2022-02-23T20:40:03Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMAwP8FxNnerN5AQ/+LelQ9OZDSxaZNvh0zLlNgoKdaCQtwvxUU19j39WFIYpB
[...]
            oPUfa8tB2CQmIWvVwsfL7UFe9iWl1R+pbqQBqvJ/acl/
            =Qxhe
            -----END PGP MESSAGE-----
          fp: FEE43962AC34E28FB078EFA9F6C9CFE02626638C
    encrypted_regex: ^(data|stringData|consumerKey|email|groupName|applicationKey|host|hosts|server|dnsNames)$
    version: 3.7.1
